<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ensias.testapp.LoginActivity">
    <data>
        <variable name="user" type="ensias.testapp.Model.User"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/logo"
                        app:srcCompat="@drawable/ic_launcher_background" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    app:font="@{`Roboto`}" />

                <EditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/login_name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:text="@{user.email}"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:text="@{user.password}"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/signinButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:pb_colorComplete="@color/colorLine"
                    app:pb_colorError="@color/colorLineLight"
                    app:pb_colorNormal="@color/colorAccent"
                    app:pb_colorPressed="@color/colorLine"
                    app:pb_colorProgress="@color/purple_progress"
                    app:pb_textComplete="@string/logged_in"
                    app:pb_textError="@string/error_log_in"
                    app:pb_textProgress="@string/ctoserver" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>